--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     z-index: 50;
-    background-color: #fff;
+    background-color: rgba(255,255,255,0.95);
 
     &__container {
         max-width: 1200px;
