add new sprite images

--- a/scss/_member.scss
+++ b/scss/_member.scss
@@ -35,6 +35,11 @@
         }
         &-socials {
             display: flex;
+            // background-color: #ffffff;
+
+            // &:hover {
+            //     background-color: #000000;
+            // }
         }
     }
     &__desc {
