--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -45,9 +45,12 @@
                 bottom: -3px;
                 left: 0;
             }
-            &>img {
-                padding: 15px 10px;
+            &>svg {
+                margin: 15px 10px;
                 cursor: pointer;
+                fill: #ffffff;
+                width: 27px;
+                height: 27px;
             }
             &>a {
                 color: #ffffff;
