--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,16 @@
 @import 'members';
 @import 'member';
 @import 'socials';
+
+.icon {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgba(255,255,255,0.5);
+    fill: black;
+    transition: all .5s ease;
+    
+    &:hover {
+        fill: grey;
+    }
+}
